# wikibots

./: .aiignore  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  compose.yaml  pyproject.toml  requirements.txt  usace.sh  youtube.sh
.claude/: settings.local.json
.github/workflows/: basedpywight_type_check.yml  black_formatter_check.yml  docker.yml  lint.yml  tests.yml
src/wikibots/: flickr.py  flickrreview.py  inaturalist.py  pas.py  usace.py  youtube.py
src/wikibots/lib/: bot.py  claim.py  claims.py  wikidata.py  wikidata_entities.py  wikidata_properties.py
tests/: test_flickr_rate_limit.py
